[#AI commit#][Claude Code]feat: 完善多Agent协作框架核心模块，含工具注册、Skill执行、LLM适配、上下文压缩、端点负载均衡及前端状态管理